--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ deps =
     ipython
     pytest >= 2.9
 commands =
-    coverage run --source=bin/ --omit=bin/autojump_argparse.py -m \
+    coverage run --source=autojump/ --omit=autojump/lib/argparse.py -m \
         py.test -vv -rxs --tb native -s --strict {posargs:tests}
     coverage report -m
 
